# rushroster-cloud

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  agent.md  alembic.ini  config.yaml.example  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 273e0fbbf7b9_add_global_statistics_table.py  9fc5a178d2a7_initial_schema.py  a8354bf2e7c1_add_is_admin_field_to_users_table.py  b8382dc79fd9_add_registration_codes_table.py
src/: __init__.py  auth_utils.py  config.py
src/api/: __init__.py  admin.py  auth.py  ingest.py  storage.py  web.py  web_ui.py
src/database/: __init__.py  crud.py  models.py  session.py
src/services/: community.py  reports.py
src/storage/: __init__.py  object_storage.py
src/tasks/: __init__.py  update_stats.py
static/css/: styles.css
templates/: base.html
templates/admin/: dashboard.html  devices.html  registration_codes.html  users.html
templates/auth/: login.html  register.html
templates/dashboard/: home.html
templates/devices/: detail.html  list.html  register_form.html
templates/events/: list.html
templates/public/: home.html  speeders.html
templates/stats/: dashboard.html
tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_dashboard.py  test_device_events.py  test_device_management.py  test_events.py  test_photo_upload.py  test_public_speeders.py  test_registration_codes.py  test_statistics.py  test_timing_attack_fix.py  test_web_ui.py
